crud first finish

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL='mysql://438bvosy9nqhy8pkthkh:pscale_pw_kI6ZfrExoWSPhg9g5lJizIOLsF33yD6WBjX17AUwpyP@aws.connect.psdb.cloud/learn-crud?sslaccept=strict"'
+DATABASE_URL = 'mysql://3wqcupcw0b78la33u4y5:pscale_pw_oJ3i977myiGrxy3A6QOqf8vm1We1ADE5kWmOXulWgtk@aws.connect.psdb.cloud/learn-crud?sslaccept=strict'
+BASE_URL = 'http://localhost:3000'
